# afterglow

./: .gitignore  Agents.md  CLAUDE.md  CMAKE_REFACTORING.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  verify-build.sh
.cache/clangd/index/: BrightnessPlugin.cpp.9C18EBDEDDA44712.idx  BrightnessPlugin.h.75B6003489E57A42.idx  GrayscalePlugin.cpp.10B59DBC95A1DECD.idx  GrayscalePlugin.h.CB27448D4413A0A6.idx  PhotoEditorApp.cpp.FB4233F306E96F05.idx  PhotoEditorApp.h.D5B6DD674BC32188.idx  PhotoEditorPlugin.h.3D080F87A31179E8.idx  PluginManager.cpp.35027C609EC84A2D.idx  PluginManager.h.ADF8FB6DD00BCAD9.idx  main.cpp.2207779239BD0527.idx
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
cmake/: uninstall.cmake
plugins/: CMakeLists.txt
plugins/blur/: BlurEffect.cpp  BlurEffect.h  BlurPlugin.cpp  BlurPlugin.h  CMakeLists.txt
plugins/brightness/: BrightnessEffect.cpp  BrightnessEffect.h  BrightnessPlugin.cpp  BrightnessPlugin.h  CMakeLists.txt
plugins/clarity/: CMakeLists.txt  ClarityEffect.cpp  ClarityEffect.h
plugins/colorbalance/: CMakeLists.txt  ColorBalanceEffect.cpp  ColorBalanceEffect.h
plugins/croprotate/: CMakeLists.txt  CropRotateEffect.cpp  CropRotateEffect.h
plugins/denoise/: CMakeLists.txt  DenoiseEffect.cpp  DenoiseEffect.h
plugins/exposure/: CMakeLists.txt  ExposureEffect.cpp  ExposureEffect.h
plugins/filmgrain/: CMakeLists.txt  FilmGrainEffect.cpp  FilmGrainEffect.h
plugins/grayscale/: CMakeLists.txt  GrayscaleEffect.cpp  GrayscaleEffect.h  GrayscalePlugin.cpp  GrayscalePlugin.h
plugins/hotpixel/: CMakeLists.txt  HotPixelEffect.cpp  HotPixelEffect.h
plugins/saturation/: CMakeLists.txt  SaturationEffect.cpp  SaturationEffect.h
plugins/splittoning/: CMakeLists.txt  SplitToningEffect.cpp  SplitToningEffect.h
plugins/unsharp/: CMakeLists.txt  UnsharpEffect.cpp  UnsharpEffect.h
plugins/vignette/: CMakeLists.txt  VignetteEffect.cpp  VignetteEffect.h
plugins/whitebalance/: CMakeLists.txt  WhiteBalanceEffect.cpp  WhiteBalanceEffect.h
scripts/: build.sh  check-coverage.sh  run.sh  test.sh
scripts/hooks/: pre-push
src/: main.cpp
src/core/: EffectManager.cpp  EffectManager.h  ExportOptions.h  ExportPath.cpp  ExportPath.h  GpuContextBase.h  GpuDeviceRegistry.cpp  GpuDeviceRegistry.h  GpuDeviceRegistryOCL.h  GpuPipeline.cpp  GpuPipeline.h  Histogram.cpp  Histogram.h  ICropSource.h  IGpuEffect.h  IInteractiveEffect.h  ImageMetadata.h  ImageProcessor.cpp  ImageProcessor.h  PhotoEditorEffect.h  PhotoEditorPlugin.h  PluginManager.cpp  PluginManager.h  RawLoader.cpp  RawLoader.h  SettingsExporter.cpp  SettingsExporter.h  SettingsImporter.cpp  SettingsImporter.h  blur_kernels.h  color_kernels.h
src/ui/: ExportDialog.cpp  ExportDialog.h  PhotoEditorApp.cpp  PhotoEditorApp.h  Stylesheets.cpp  Stylesheets.h  Theme.h  ViewportWidget.cpp  ViewportWidget.h
src/widgets/: ParamSlider.cpp  ParamSlider.h
tests/: CMakeLists.txt
tests/core/: test_effect_apply_parameters.cpp  test_effect_manager.cpp  test_export_path.cpp  test_gpu_pipeline.cpp  test_histogram.cpp  test_settings_exporter.cpp  test_settings_importer.cpp
tests/effects/: CMakeLists.txt  ImageHelpers.h  test_blur.cpp  test_brightness.cpp  test_clarity.cpp  test_colorbalance.cpp  test_croprotate.cpp  test_denoise.cpp  test_exposure.cpp  test_filmgrain.cpp  test_grayscale.cpp  test_hotpixel.cpp  test_saturation.cpp  test_splittoning.cpp  test_unsharp.cpp  test_vignette.cpp  test_whitebalance.cpp
tests/golden/: CMakeLists.txt  test_golden.cpp
tests/golden/cases/: .gitkeep
tests/widgets/: test_param_slider.cpp
